# uchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  client_app  config.yaml  main.c  style.css  style_w.css  uchat  uchat.db  uchat.db-journal  uchat_server
src/client/gui/: Glade_structures.glade  add_member_chat.c  client.c  client.h  gui_start.c  login.c  mainpage.c  mainpage.h  register.c
src/config/: config.c  config.h
src/db/: db.c  db.h  migrations.c  migrations.h
src/db/assets/migrations/: 001_drop.sql  001_init.sql
src/db/core/: core.h  db.c
src/db/core/chat_members/: is_user_in_chat.c
src/db/core/chats/: chat_exists.c  chats.h  create_chat.c  delete_chat.c  get_chat_by_id.c  update_chat_name.c
src/db/core/users/: create_user.c  delete_user.c  free_user.c  get_user_by_username.c  get_user_by_uuid.c  update_user_password.c  update_user_username.c  users.c  users.h
src/db/migrations/: 001_init.sql
src/logger/: logger.c
src/pkg/config/: config.c  config.h
src/pkg/crypto/: crypto.c  crypto.h
src/pkg/http_response/: response.h
src/pkg/httputils/: start_with.c
src/pkg/json_parser/: json_parser.c  json_parser.h
src/pkg/jwt_utils/: jwt_utils.c  jwt_utils.h
src/pkg/logger/: logger.h
src/pkg/worker/: worker.c  worker.h
src/server/: daemonize.c  main.c  server.c  server.h  threads.c  threads.h
src/server/db/assets/migrations/: 001_drop.sql  001_init.sql
src/server/db/core/: core.h  create_tables.c  db.c  execute_sql.c  generate_uuid.c  migrations.c  sqlite.c
src/server/db/core/chat_members/: add_chat_member.c  chat_members.h  delete_all_chat_members.c  delete_user_from_chat.c  get_chat_members.c  is_user_admin.c  is_user_in_chat.c  remove_chat_member.c
src/server/db/core/chats/: chat_exists.c  chat_private_exist.c  chats.h  create_chat.c  delete_chat.c  get_chat_by_id.c  get_chat_messages.c  get_chat_name.c  get_last_message_id_in_chat.c  get_last_message_in_chat.c  get_user_chats.c  is_chat_group.c  is_last_message_in_chat.c  update_chat_name.c  update_last_message_id.c
src/server/db/core/messages/: create_message.c  delete_all_messages_in_chat.c  delete_message.c  edit_last_message_id.c  edit_message.c  get_chat_id_by_message_id.c  get_last_message_id.c  get_message_by_id.c  get_messages_by_chat.c  get_new_messages_by_chat.c  message_exists.c  messages.h
src/server/db/core/users/: check_user_credentials.c  create_user.c  delete_user.c  free_user.c  get_user_by_username.c  get_user_by_uuid.c  update_user_password.c  update_user_username.c  users.h
src/server/pkg/config/: config.c  config.h  logger.c
src/server/pkg/http_response/: create_error_response.c  create_response.c  prepare_response.c  response.h
src/server/pkg/httputils/: httpcontext.h  httputils.h  process_request_data.c
src/server/pkg/json_parser/: json_parser.c
src/server/pkg/jwt_utils/: jwt_utils.c  jwt_utils.h
src/server/pkg/threads/: dequeue_task.c  enqueue_task.c  free_task.c  init_task_queue.c  thread_pool_destroy.c  thread_pool_init.c  thread_worker.c
src/server/pkg/ws/: add_client.c  broadcast_message.c  remove_client.c  ws.h  ws_chat_handler.c  ws_server_start.c
src/server/services/: deamon.c  free_request.c  handle_request.c  router.c  service.c  service.h
src/server/services/auth/: auth_handlers.h  login.c  logout.c  register.c  update_username.c
src/server/services/chats/: chats.h  handle_delete_chat.c
src/server/services/messages/: handle_delete_message.c  handle_edit_message.c  handle_send_message.c  messages.h
src/server/services/messenger/: chat_create.c  chat_delete.c  chat_get_history.c  chat_get_info.c  chat_group_add_member.c  chat_group_create.c  chat_group_kick_user.c  chat_group_leave.c  chat_private_create.c  chat_update_name.c  create_chat.c  delete_chat.c  edit_message.c  handle_long_polling.c  message_delete.c  message_edit.c  message_send.c  messenger.h  send_message.c  user_get_chats.c
src/services/: free_request.c  handle_register.c  handle_request.c  router.c  service.c  service.h
src/services/auth/: auth.c  auth.h  auth_handlers.c  auth_handlers.h  handle_register.c  login.c  logout.c  register.c  update_username.c
src/services/auth/handlers/: auth_handlers.h  get_request_json.c  handlers.h  login.c  register.c
src/services/chats/: chats.h  create_chats.c
src/services/messages/: messages.h
